--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ colored = "2.0"
 strsim = "0.10"
 anyhow = "1.0"
 thiserror = "1.0"
-nom = "7.1" # Add nom
+nom = "7.1"
+regex = "1.10"
+once_cell = "1.18"
