--- a/templates/Justfile
+++ b/templates/Justfile
@@ -4,23 +4,18 @@ export concurrently_colors := "blue,green,yellow,magenta,cyan,white"
 help:
     just --list
 
-#if (or node astro)
-dev:
-    npm run dev
-#endif
+setup:
+    npm clean-install #if (or node squint)
 
-#if (and gleam lustre)
 dev:
-    gleam run -m lustre/dev start
-#endif gleam
+    npm run dev #if (or node astro)
+    gleam run -m lustre/dev start #if (and gleam lustre)
 
-#if gleam
 run:
-    gleam run
+    gleam run #if gleam
 
 test:
-    gleam test
-#endif gleam
+    gleam test #if gleam
 
 all:
     concurrently \
