Add just open cmd

--- a/templates/Justfile
+++ b/templates/Justfile
@@ -18,6 +18,21 @@ build:
 run:
     gleam run #if (and just gleam)
 
+open cmd="":
+    #!/usr/bin/env bash
+    url="http://localhost:8080"
+
+    if [[ -n "{{ cmd }}" ]]; then
+        {{ cmd }} "$url"
+    elif command -v xdg-open &> /dev/null; then
+        xdg-open "$url"
+    elif command -v open &> /dev/null; then
+        open "$url"
+    else
+        echo "No suitable cmd found. Please install xdg-open or open."
+        exit 1
+    fi
+
 test:
     gleam test #if (and just gleam)
 
